[package]
name = "dungeonstein"
version = "0.1.0"
authors = ["Andrea Rossini <rossini.andrea.lc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["image"]

[dependencies.gl]
version = "0.14.0"

[dependencies.specs]
version = "0.16.1"

[dependencies.slotmap]
version = "0.4.0"

[dependencies.serde]
version = "1.0.106"
features = ["derive"]

[dependencies.ron]
version = "0.5.1"

[dependencies.nalgebra]

[dependencies.nalgebra-glm]
version = "0.7.0"

